objects/RTAT_Wafer_Finish_Cycle_Time__c.object
<CustomObject>
    <description>Wafer finishing cycle time, given Chip Attach Type (WB, C4 or both), Finish milestone type, Speed (Rocket, Turbo, Ramp, NTAT) and Site location</description>
    <fields>
        <fullName>Chip_Attach_Technology__c</fullName>
        <label>Chip Attach Technology</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C4-WB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle_times__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cycle times</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finish_Milestone__c</fullName>
        <label>Finish Milestone</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <formula>UPPER(Finish_Milestone__c &amp; &apos; (&apos; &amp; TEXT( Location_Name__c )) &amp; &apos;)&apos;</formula>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BURLINGTON</fullName>
                </value>
                <value>
                    <fullName>BROMONT</fullName>
                </value>
                <value>
                    <fullName>Fishkill</fullName>
                </value>
                <value>
                    <fullName>FSK 300MM</fullName>
                </value>
                <value>
                    <fullName>AMKOR-K4</fullName>
                </value>
                <value>
                    <fullName>AMKOR-T5 Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ROCKET</fullName>
                </value>
                <value>
                    <fullName>TURBO</fullName>
                </value>
                <value>
                    <fullName>RAMP</fullName>
                </value>
                <value>
                    <fullName>NTAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wafer_Size__c</fullName>
        <label>Wafer Size</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>200MM</fullName>
                </value>
                <value>
                    <fullName>300MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RTAT Wafer Finish Cycle Time</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Label__c</columns>
        <columns>Finish_Milestone__c</columns>
        <columns>Location_Name__c</columns>
        <columns>Speed__c</columns>
        <columns>Wafer_Size__c</columns>
        <columns>Chip_Attach_Technology__c</columns>
        <columns>Cycle_times__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Wafer Finish Cycle Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTAT Wafer Finish Cycle Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>